@@ -1,5 +1,10 @@
 JPublish 4 change log:
 
+[2010-09-21]
+  - added a PathAction method for getting access to the Action executed on path matching
+  - upgraded the JRuby support
+  - see the previous svn commit comments for more details
+
 [2010.04.20]
   - refactored the servlet response for static resources.
   - honors the "If-Modified-Since" request header and answers with 304-Not modified, if the static
